<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Main Config -->
    <string name="app_name">Movie/Series DB</string>
    <string name="developer">Bruno Zeferino</string>

    <!-- MovieList Controller -->
    <string name="noConnection">Não foi possível obter dados do servidor.</string>
    <string name="loadingMore">A carregar…</string>

    <!-- MovieDetails Controller -->
    <string name="min">min.</string>
    <string name="voteCount">votos</string>
    <string name="noOverview">Desculpe, atualmente não há nenhuma visão geral para este filme.</string>
    <string name="noBiography">Desculpe, atualmente não há nenhuma biografia para este ator.</string>
    <string name="relatedMovies">FILMES RELACIONADOS</string>
    <string name="relatedTV">PROGRAMAS DE TV RELACIONADAS</string>

    <!-- CastDetails -->
    <string name="alsoKnownAs">Também conhecido como:</string>
    <string name="knownFor">CONHECIDO POR</string>
    <string name="showMore">MOSTRAR TUDO</string>

    <!-- TVDetails -->
    <string name="type">Tipo:</string>
    <string name="firstAirDate">Data de estreia:</string>
    <string name="lastAirDate">Data do Ultimo lançamento:</string>
    <string name="numberOfEpisodes">Numero de Episodios:</string>
    <string name="numberOfSeasons">Numero de Temporadas:</string>

    <!-- About View -->
    <string name="aboutApp">Sobre</string>
    <string name="Intro">Filmes e Series DB é uma aplicação desenvolvida com tecnologia java por Bruno Zeferino.</string>
    <string name="credits">Créditos:</string>
    <string name="android_studio">Android Studio é uma plataforma desenvolvida pela Google Inc e pela Open Handset Alliance.</string>
    <string name="android_studio_url">Android Studio é uma plataforma oficial para desenvolvimento de aplicações Android</string>
    <string name="java">Java é propriedade da Oracle</string>
    <string name="java_url" translatable="false">https://www.oracle.com</string>
    <string name="uil">Android Universal Image Loader</string>
    <string name="uil_url" translatable="false">https://github.com/nostra13/Android-Universal-Image-Loader</string>
    <string name="bluejamesbond">Blue James Bond Text Justify</string>
    <string name="bluejamesbond_url" translatable="false">https://github.com/bluejamesbond/TextJustify-Android</string>
    <string name="robolectric">Robolectric Framework</string>
    <string name="robolectric_url" translatable="false">http://robolectric.org/</string>
    <string name="hockey">Hockey SDK</string>
    <string name="hockey_url" translatable="false">https://www.hockeyapp.net/features/</string>
    <string name="okhttp">OkHttp</string>
    <string name="okhttp_url" translatable="false">https://square.github.io/okhttp/</string>
    <string name="g_icons">Google Official Icons</string>
    <string name="g_icons_url" translatable="false">https://design.google.com/icons/</string>
    <string name="com">Comunidade</string>
    <string name="com_url1" translatable="false">https://stackoverflow.com/</string>
    <string name="com_url2" translatable="false">https://android-arsenal.com/</string>
    <string name="TMDbText" translatable="false">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>
    <string name="TMDbLegalNotice" translatable="false">TMDb respects the rights of copyright holders and publishers and requires all users to confirm they own the copyright or have permission from the copyright holder to upload content. We comply with the Digital Millennium Copyright Act (DMCA) and expeditiously remove content when properly notified, unless it reasonably appears to us that the content does not infringe upon copyright. Please note, however, that under Section 512(f) any person who knowingly materially misrepresents that material or activity is a copyright infringement may be subject to liability for damages. You should educate yourself as to whether content does, in fact infringe upon your copyright, or whether, for instance "fair use" under 17 U.S.C. §107 applies. If you are unsure whether the content you are reporting is infringing your legal rights, you may wish to seek legal guidance. Keep in mind that submitting intentionally misleading reports of infringement may be punishable under the Digital Millennium Copyright Act (DMCA) in the United States or similar laws in other countries.\n\nFor claims of copyright infringement, please contact our designated agent under the Digital Millennium Copyright Act:\nCopyright Agent at: 489 S. El Camino Real, San Mateo, CA, 94402.</string>
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Filmes</item>
        <item>Programas de TV</item>
        <item>Géneros</item>
        <item>Sobre</item>
    </string-array>

    <!-- ActionBar titles -->
    <string name="moviesTitle">Filmes</string>
    <string name="tvTitle">Programas de TV</string>
    <string name="genresTitle">Géneros</string>

    <!-- Movies tabs -->
    <string-array name="moviesTabs">
        <item>Brevemente</item>
        <item>Em Exibição</item>
        <item>Populares</item>
        <item>Mais Votados</item>
    </string-array>

    <!-- TV tabs -->
    <string-array name="tvTabs">
        <item>No Ar</item>
        <item>Emitidos Hoje</item>
        <item>Populares</item>
        <item>Mais Votados</item>
    </string-array>

    <!-- detailTabs tabs -->
    <string-array name="detailTabs">
        <item>Informação</item>
        <item>Elenco</item>
        <item>Sinopse</item>
    </string-array>

    <!-- Cast detailTabs tabs -->
    <string-array name="castDetailTabs">
        <item>Informação</item>
        <item>Conhecido/a Por</item>
        <item>Biografia</item>
    </string-array>

    <!-- Search -->
    <string name="search_title">Pesquisar</string>
    <string name="search_hint">Pesquisar…</string>
    <string name="nomoreresults">Não há mais resultados.</string>
    <string name="noResults">Desculpe, nenhum resultado encontrado.</string>
    <string name="timeout">Conexão expirou , por favor, tente novamente</string>
    </resources>